# llmdata

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
configs/: default.yaml
llmdata/: __init__.py  __main__.py
llmdata/aggregations/: __init__.py  counter.py
llmdata/cli/: main.py
llmdata/core/: __init__.py  config.py  dependencies.py  filesystem.py  ops.py  pipeline.py  readers.py  registry.py  state.py  utils.py  writers.py
llmdata/processors/extract/: __init__.py  html.py  tei.py
llmdata/processors/filter/: __init__.py  language.py  quality.py  tokens.py
llmdata/processors/format/: __init__.py  deduplication.py  fixes.py  pii.py
llmdata/processors/ingest/: __init__.py
llmdata/processors/tag/: __init__.py  language.py  ngrams.py  perplexity.py  quality.py  tokens.py
tests/cli/: __init__.py
tests/core/: test_config.py  test_ops.py  test_pipeline.py  test_readers.py  test_registry.py  test_utils.py  test_writers.py
tests/processors/: __init__.py  test_formatters.py
